# jsoncompat

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  bootstrap.sh  codex.md  developing.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  readme.md  schema.json  schema2.json
codegen/: Cargo.toml  README.md
codegen/src/: dataclasses.rs  error.rs  lib.rs  model.rs  parser.rs  pydantic.rs  strings.rs
codegen/tests/: codegen_fixtures.rs  fuzz_codegen.rs  pydantic.rs
codegen/tests/golden/pydantic/: README.md  json_schema_codegen_base.py  pyproject.toml
codegen/tests/golden/pydantic/additionalProperties/: 0_deserializer.py  0_serializer.py  1_deserializer.py  1_serializer.py  2_deserializer.py  2_serializer.py  3_deserializer.py  3_serializer.py  4_deserializer.py  4_serializer.py  5_deserializer.py  5_serializer.py  6_deserializer.py  6_serializer.py  7_deserializer.py  7_serializer.py  8_deserializer.py  8_serializer.py
codegen/tests/golden/pydantic/allOf/: 0_deserializer.py  0_serializer.py  10_deserializer.py  10_serializer.py  11_deserializer.py  11_serializer.py  1_deserializer.py  1_serializer.py  2_deserializer.py  2_serializer.py  3_deserializer.py  3_serializer.py  4_deserializer.py  4_serializer.py  5_deserializer.py  5_serializer.py  6_deserializer.py  6_serializer.py  7_deserializer.py  7_serializer.py  8_deserializer.py  8_serializer.py  9_deserializer.py  9_serializer.py
codegen/tests/golden/pydantic/anchor/: 0_deserializer.py  0_serializer.py  1_deserializer.py  1_serializer.py  2_deserializer.py  2_serializer.py  3_deserializer.py  3_serializer.py
codegen/tests/golden/pydantic/anyOf/: 0_deserializer.py  0_serializer.py  1_deserializer.py  1_serializer.py  2_deserializer.py  2_serializer.py  3_deserializer.py  3_serializer.py  4_deserializer.py  4_serializer.py  5_deserializer.py  5_serializer.py  6_deserializer.py  6_serializer.py  7_deserializer.py  7_serializer.py
codegen/tests/golden/pydantic/boolean_schema/: 0_deserializer.py  0_serializer.py  1_deserializer.py  1_serializer.py
codegen/tests/golden/pydantic/const/: 0_deserializer.py  0_serializer.py  10_deserializer.py  10_serializer.py  11_deserializer.py  11_serializer.py  12_deserializer.py  12_serializer.py  13_deserializer.py  13_serializer.py  14_deserializer.py  14_serializer.py  1_deserializer.py  1_serializer.py  2_deserializer.py  2_serializer.py  3_deserializer.py  3_serializer.py  4_deserializer.py  4_serializer.py  5_deserializer.py  5_serializer.py  6_deserializer.py  6_serializer.py  7_deserializer.py  7_serializer.py  8_deserializer.py  8_serializer.py  9_deserializer.py  9_serializer.py
codegen/tests/golden/pydantic/contains/: 0_deserializer.py  0_serializer.py  1_deserializer.py  1_serializer.py  2_deserializer.py  2_serializer.py  3_deserializer.py  3_serializer.py  4_deserializer.py  4_serializer.py  5_deserializer.py  5_serializer.py  6_deserializer.py  6_serializer.py
codegen/tests/golden/pydantic/content/: 0_deserializer.py  0_serializer.py  1_deserializer.py  1_serializer.py  2_deserializer.py  2_serializer.py  3_deserializer.py  3_serializer.py
codegen/tests/golden/pydantic/default/: 0_deserializer.py  0_serializer.py  1_deserializer.py  1_serializer.py  2_deserializer.py  2_serializer.py
codegen/tests/golden/pydantic/defs/: 0_deserializer.py  0_serializer.py
codegen/tests/golden/pydantic/dependentRequired/: 0_deserializer.py  0_serializer.py  1_deserializer.py  1_serializer.py  2_deserializer.py  2_serializer.py  3_deserializer.py  3_serializer.py
codegen/tests/golden/pydantic/dependentSchemas/: 0_deserializer.py  0_serializer.py  1_deserializer.py  1_serializer.py  2_deserializer.py  2_serializer.py  3_deserializer.py  3_serializer.py
codegen/tests/golden/pydantic/dynamicRef/: 0_deserializer.py  0_serializer.py  10_deserializer.py  10_serializer.py  11_deserializer.py  11_serializer.py  12_deserializer.py  12_serializer.py  13_deserializer.py  13_serializer.py  14_deserializer.py  14_serializer.py  15_deserializer.py  15_serializer.py  16_deserializer.py  16_serializer.py  17_deserializer.py  17_serializer.py  18_deserializer.py  18_serializer.py  19_deserializer.py  19_serializer.py  1_deserializer.py  1_serializer.py  2_deserializer.py  2_serializer.py  3_deserializer.py  3_serializer.py  4_deserializer.py  4_serializer.py  5_deserializer.py  5_serializer.py  6_deserializer.py  6_serializer.py  7_deserializer.py  7_serializer.py  8_deserializer.py  8_serializer.py  9_deserializer.py  9_serializer.py
codegen/tests/golden/pydantic/enum/: 0_deserializer.py  0_serializer.py  10_deserializer.py  10_serializer.py  (+24 more)
codegen/tests/golden/pydantic_fuzz/: README.md  json_schema_codegen_base.py
examples/python/pydantic_golden/: .gitignore  pyproject.toml
examples/python/pydantic_golden/tests/: conftest.py  schemas.golden  test_golden.py
fuzz/: Cargo.toml  README.md
fuzz/src/: format_gen.rs  lib.rs  regex_gen.rs
fuzz/tests/: complex_schemas.rs  generation.rs  random_schemas.rs
openapi/: Cargo.toml  README.md
openapi/src/: json_pointer.rs  lib.rs
pybindings/: Cargo.toml  README.md  bench_dataclasses_runtime.py  bench_dataclasses_scaling.py  bench_dataclasses_startup.py  bench_fixture_models.py  bench_fixture_samples.json  benchmark_generated_models.py  fixture_benchmark_support.py  pyproject.toml
pybindings/benchmark_schemas/: representative.json  scaling.json
pybindings/jsoncompat/: __init__.py  _native.pyi
pybindings/jsoncompat/codegen/: __init__.py  dataclasses.py  serialization.py
pybindings/src/: fast_validation.rs  lib.rs  model_converter.rs
python/: Cargo.toml  README.md  json_schema_py.pyi  jsoncompat.pyi  pyproject.toml
python/src/: lib.rs
schema/: Cargo.toml  README.md
schema/src/: ast.rs  canonicalize.rs  constraints.rs  json_semantics.rs  lib.rs  roundtrip_tests.rs  schema_children.rs  schema_metadata.rs
schema/src/canonicalize/: integration_tests.rs
schema/tests/: basic.rs  canonicalize.rs  roundtrip.rs
wasm/: Cargo.toml  README.md
wasm/pkg/: package.json
wasm/src/: lib.rs
(+2486 files in other folders)
