[package]
name = "jsoncompat"
version = "0.2.0"
edition = "2021"
description = "JSON Schema Compatibility Checker"
repository = "https://github.com/ostrowr/jsoncompat"
license = "MIT"

# Workspace definition so we can host the additional sibling crates.
[workspace]
members = [
    "fuzz",     # -> json_schema_fuzz
    "schema",   # -> json_schema_ast
    "python",   # -> jsoncompat Python bindings
    "wasm"      # -> json_schema_wasm bindings
]

[dependencies]
rand = "0.8.5"
anyhow = "1.0.95"
thiserror = "2.0.11"
url = "2.5.4"
serde_json = "1.0.135"
clap = { version = "4.5.26", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
# Small, zero‑dep colour library for pleasant CLI output.
owo-colors = "3.5"
# Our own strict Draft‑2020 implementation crate
json_schema_ast = { path = "schema", version = "0.2.0" }
json_schema_fuzz = { path = "fuzz", version = "0.2.0" }
console = "0.16.0"

[dev-dependencies]
json_schema_fuzz = { path = "fuzz" }
datatest-stable = "0.1"

[[test]]
name = "backcompat"
harness = false

[[test]]
name = "fuzz"
harness = false
