[package]
name = "jsoncompat"
version = "0.2.6"
edition = "2024"
description = "JSON Schema Compatibility Checker"
repository = "https://github.com/ostrowr/jsoncompat"
license = "MIT"
readme = "readme.md"

# Workspace definition so we can host the additional sibling crates.
[workspace]
members = [
    "fuzz",     # -> json_schema_fuzz
    "schema",   # -> json_schema_ast
    "python",   # -> jsoncompat Python bindings
    "wasm"      # -> json_schema_wasm bindings
]

[dependencies]
rand = "0.10.0"
anyhow = "1.0.102"
thiserror = "2.0.18"
url = "2.5.8"
serde_json = "1.0.149"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
# Small, zero‑dep colour library for pleasant CLI output.
owo-colors = "4.3"
# Our own strict Draft‑2020 implementation crate
json_schema_ast = { path = "schema", version = "0.2.6" }
json_schema_fuzz = { path = "fuzz", version = "0.2.6" }
console = "0.16.3"
fancy-regex = "0.17"

[dev-dependencies]
json_schema_fuzz = { path = "fuzz" }
criterion = "0.8"
datatest-stable = "0.3"

[[test]]
name = "backcompat"
harness = false

[[test]]
name = "fuzz"
harness = false

[[bench]]
name = "validator_cache"
harness = false

[[bench]]
name = "schema_ops"
harness = false
