[package]
name = "json_schema_codegen"
version = "0.2.2"
edition = "2021"
description = "JSON Schema code generation utilities"
repository = "https://github.com/ostrowr/jsoncompat"
license = "MIT"
readme = "README.md"

[dependencies]
json_schema_ast = { path = "../schema", version = "0.2.2" }
serde_json = "1.0.135"
thiserror = "2.0.11"

[dev-dependencies]
datatest-stable = "0.1"

[[test]]
name = "codegen_fixtures"
harness = false
