[package]
name = "jsoncompat_codegen"
version = "0.3.1"
edition = "2024"
description = "Canonical stamped JSON Schema bundles for jsoncompat code generation"
repository = "https://github.com/ostrowr/jsoncompat"
license = "MIT"

[dependencies]
json_schema_ast = { path = "../schema", version = "0.3.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
