[package]
name = "json_schema_fuzz"
version = "0.2.6"
edition = "2024"
description = "JSON Schema Fuzzer"
repository = "https://github.com/ostrowr/jsoncompat"
license = "MIT"

[dependencies]
rand = "0.9"
serde_json = "1.0.149"
json_schema_ast = { path = "../schema", version = "0.2.6" }
fancy-regex = "0.17"

[dev-dependencies]
url = "2.5.8"
