[package]
name = "json_schema_fuzz"
version = "0.2.6"
edition = "2024"
description = "JSON Schema Fuzzer"
repository = "https://github.com/ostrowr/jsoncompat"
license = "MIT"

[dependencies]
rand = "0.10"
serde_json = "1.0.135"
json_schema_ast = { path = "../schema", version = "0.2.6" }
fancy-regex = "0.12"
regex-syntax = "0.8"
fake = { version = "5.1.0", features = ["chrono", "uuid"] }
chrono = "0.4.44"
uuid = { version = "1.22.0", features = ["rng-rand"] }

[dev-dependencies]
url = "2.5.4"
