[package]
name = "jsoncompat_py"
version = "0.4.0"
readme = "README.md"
edition = "2024"
publish = false # This crate is not published to crates.io; only PyPI.

[lib]
name = "jsoncompat"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "generate-import-lib"] }
serde_json = "1.0.149"
jiter = { version = "0.15.0", features = ["python"] }
anyhow = "1.0.102"
rand = "0.10.0"

# Internal crates
jsoncompat = { path = ".." }
json_schema_ast = { path = "../schema" }
json_schema_fuzz = { path = "../fuzz" }
jsonschema = { git = "https://github.com/ostrowr/jsonschema.git", rev = "caa1aa31729adceeaff01b81d58f7adb9ceb758d", default-features = false, features = ["jiter", "python"] }

[features]
default = []

[package.metadata.maturin]
# Include PEP 561 style typing information (py.typed + .pyi stubs) in the wheel.
include-type-hints = true
