[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name    = "jsoncompat"        # wheel / PyPI name
dynamic = ["version"]         # "version" pulled from Cargo.toml
description = "JSON Schema compatibility checker for evolving schemas"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
msgpack = ["msgpack>=1.1.1"]
yaml = ["PyYAML>=6.0.2"]

[dependency-groups]
benchmark = [
    "datamodel-code-generator==0.60.0",
    "pydantic[email]==2.13.4",
]

[tool.maturin]
module-name = "jsoncompat._native"
python-source = "."
