[package]
name = "jsoncompat_py"
version = "0.2.6"
readme = "README.md"
edition = "2024"
publish = false # This crate is not published to crates.io; only PyPI.

[lib]
name = "jsoncompat"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "generate-import-lib"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
rand = "0.10.0"

# Internal crates
jsoncompat = { path = ".." }
json_schema_fuzz = { path = "../fuzz" }

[features]
default = []

[package.metadata.maturin]
# Include PEP 561 style typing information (py.typed + .pyi stubs) in the wheel.
include-type-hints = true
