[package]
name = "json_schema_ast"
version = "0.2.6"
edition = "2024"
description = "Strict JSON Schema Draft 2020-12 frontend and resolved IR"
repository = "https://github.com/ostrowr/jsoncompat"
license = "MIT"
readme = "README.md"


[dependencies]
fancy-regex = "0.12"
serde_json = "1.0.135"
# by default, jsonschema tries to use reqwest to resolve remote schemas, which is not supported in wasm
jsonschema = { version = "0.16", features = ["draft202012"], default-features = false}
thiserror = "2.0.11"
url = "2.5.4"
percent-encoding = "2.3.1"

[dev-dependencies]
json_schema_fuzz = { path = "../fuzz" }
rand = "0.10"
