[package]
name = "json_schema_ast"
version = "0.3.0"
edition = "2024"
description = "Strict JSON Schema Draft 2020-12 frontend and resolved IR"
repository = "https://github.com/ostrowr/jsoncompat"
license = "MIT"
readme = "README.md"


[dependencies]
fancy-regex = "0.17"
serde_json = "1.0.149"
# by default, jsonschema tries to use reqwest to resolve remote schemas, which is not supported in wasm
jsonschema = { version = "0.45", default-features = false}
thiserror = "2.0.18"
url = "2.5.8"
percent-encoding = "2.3.2"

[dev-dependencies]
json_schema_fuzz = { path = "../fuzz" }
rand = "0.10.0"
