[package]
# Crate name remains unique for the Rust workspace, but we tell wasm‑pack to
# publish this as the *npm* package `jsoncompat` so consumers can simply
# `import { ... } from 'jsoncompat'`.
name = "jsoncompat_wasm"
version = "0.1.6-alpha.6"
edition = "2021"
description = "JSON Schema Compatibility Checker"
repository = "https://github.com/ostrowr/jsoncompat"
license = "MIT"
publish = false # This crate is not published to crates.io; only NPM.

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"

# Internal crates
jsoncompat = { path = ".." }
json_schema_fuzz = { path = "../fuzz" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }




[features]
default = ["wee_alloc"]

[dependencies.wee_alloc]
version = "0.4"
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.2"


