[project]
name = "demo"
version = "0.1.0"
description = "Demo python project that checks pydantic models for compatibility across versions"
requires-python = ">=3.12"
dependencies = ["jsoncompat-py==0.1.5a3"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["uv_build>=0.7.18,<0.8.0"]
build-backend = "uv_build"

[tool.uv]
